# sechubapp

./: .cruft.json  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/sechubapp/: __init__.py  sechubapp.py
tests/: test_sechubapp.py
